# Gamal

./: db.sqlite3  pyproject.toml
MainProject/: settings.py  urls.py
pages/: urls.py  views.py
pages/migrations/: 0001_initial.py
products/: admin.py  forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_rename_is_active_product_active.py  0003_female_alter_product_options_male.py  0004_user.py  0005_login.py
templates/pages/: about.html  index.html
templates/products/: about.html  index.html
