[tool.poetry]
name = "gamal"
version = "0.1.0"
description = ""
authors = ["AnasHagras"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
Pillow = "^9.2.0"
django-grappelli = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
